Prevent crash in case of non-working sql collection

Add some validity checks for the case where a collection is
non-initialized.

BUG: 298425
FIXED-IN: 2.6